# dnd_auction_game

./: .gitignore  LICENSE  MANIFEST.in  README.md  ag_client.py  ag_server.py  agent_linear_prediction.py  agent_random_single.py  agent_tiny_bid.py  bot  bot_monitor.py  client.py  play_game.py  plot.py  plot2.py  plot3.py  plotlatest.py  pyproject.toml  requirements.txt  server.py  setup.py  shell.nix  temp.py
bots/: AgentMax.py  Aggressive.py  BalanceMAx.py  BayesianOptimizer.py  Conservative.py  OptimalBot.py  Qlearningbot.py  Regression.py  SmartStrategistBot.py  agent_random_single.py  clusterStrategybot.py  conservativeMax.py  curve.py  gd.py  invincible.py  oppertunist.py  randoMax.py  randomMax.py  saveMax.py  sigmoidMax.py  slightlyMoreOptimal.py
dnd_auction_game/: __init__.py  auction_house.py  client.py  connection_manager.py  leadboard.py  play.py  reset.py  server.py
dnd_auction_game/templates/: leadboard.html
example_agents/: agent_linear_prediction.py  agent_print_info.py  agent_random_single.py  agent_random_walk.py  agent_tiny_bid.py  run_multi_agents.py
